# Igor

./: CMakeLists.txt  igor.rviz  igorHW.rviz  package.xml
config/: HWwheelGains.xml
include/: disturbance.h  dwa_planner.h  igorHW_control.h  igor_knee_control.h  igor_l1_control.h  igor_markers.h
launch/: igorGazebo.launch  igorHardware.launch
scripts/: CoM_Listner.py
scripts/persobalance/: __init__.py  check.py  graph.py  gui.py  ik.py  kinect.py  kinect2.py  mlcp.py  nite2.py  skeleton.py  tool.py  wii.py  wiiuse.py
scripts/persobalance/snap/: __init__.py  gl.py  math.py  tool.py  viewer.py
scripts/persobalance2/: .dir-locals.el  .qmake.cache  CMakeLists.txt  README.md  export.hpp  graph.cpp  graph.hpp  mlcp.cpp  mlcp.hpp
src/: disturbance.cpp  dwa_planner.cpp  igorHW_control.cpp  igor_knee_control.cpp  igor_l1_control.cpp  igor_markers.cpp
urdf/: Igor_armed.urdf.xacro  arm.urdf.xacro  my_hand.urdf.xacro  pepsi_can.urdf.xacro  wheel.urdf.xacro
